@@ -294,11 +294,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <compilerArguments>
-            <endorseddirs>${openejb.build.endorsed}</endorseddirs>
-          </compilerArguments>
+          <compilerArgs>
+            <arg>-Djava.endorsed.dirs=${openejb.build.endorsed}</arg>
+            <arg>-Xlint:path</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
